* Ability to start/load a campaign
* Very minimal structure for equipment

NOTES: v0.4.0 is not compatible with maps or saves from earlier versions.

v0.5.0
* Start of triggers system
* Win conditions on maps
* Portals
* Ability to put equipment in objects
* More "true to original" menus
* More map tiles
* At least two pieces of equipment in base game
* Ability to remove and equip equipment to characters
* Minimal enemy AI
* Campaign progression through completing maps
* Get campaigns working
* Properly exiting the game when win condition met
* Slightly better map loading/creation for editor

v0.6.0
* Map follows active character
* Improve editor usability
* Added in-game dialogs and trigger
* Added map object trigger
* Added pause trigger
* Added move camera trigger
* Better enemy AI - basic pathfinding, real damage, action points
* Additional dungeon tiles
* Add trigger to spawn characters
* Better menus for load and new game
* Basics for data validation
* Properly handle character death and game loss
* Special abilities for characters
* Improved scripting
* Destructable objects
* Replicate the first original campaign scenario

v0.7.0
* Full rebuild of game
* Much more flexible and detailed data loading system
* More editors for various objects
* Editors now embedded in game
* Clear documentation for all data objects

NOTES: v0.7.0 is not compatible with maps or saves from earlier versions.

v0.8.0 (unreleased)
* Added the ability to remove entities in map editor.
* Added the ability to select and edit entities in map editor.
* Slightly better movement for enemies
* Add simple controls UI
* Added January character and bell mechanics
* Improve in-game dialog system (closer to real life)
* Dialog can now be closed with key input rather than button
* Add simple script editor

Bug Fixes:
* Sir Jacob is no longer stopped by chests
* Quit button when in game now returns you to the main menu
* Placing a character in the editor will no longer duplicate the character