@@ -1,5 +1,4 @@
 export default function getEntityFlags(entity, entityData) {
-    console.log(entity, entityData);
     const myFlags = entity.entity.flags || [];
     if (entityData?.flags) {
         for (const flag of entityData.flags) {
